--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Liberta Capital, LLC</title>
+	<title>LibertaCapital.com</title>
 </head>
 <body>
 
